apps/cilium-apiGateway/api-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: api-gateway
  namespace: gateway
  cert-manager.io/issuer: cluster-issuer-api-gateway
spec:
  gatewayClassName: cilium
  listeners:
   - name: http
     port: 80
     protocol: HTTP
     hostname: "*.nightingaleheart.com"
   - name : https
     protocol: HTTPS
     hostname: "*.nightingaleheart.com"
     port: 443
     allowedRoutes:
       kinds:
       - kind: HTTPRoute
       namespaces:
         from: All
       
     tls:
       mode: Terminate
       certificateRefs:
       - kind: Secret
         name: wildcard-nightingale-certificate
