apps/cilium-apiGateway/redirect-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: http-redirect
 namespace: gateway
spec:
  parentRefs:
    - name: api-gateway
      sectionName: http

  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
